--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
 	"description": "A theme for testing Buckram baseline styles.",
 	"license": "gpl-3.0-or-later",
 	"engines": {
-		"node": ">= 6.9.4"
+		"node": ">= 10"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/pressbooks/pressbooks-buckram.git"
 	},
 	"dependencies": {},
-	"devDependencies": {
-		"pressbooks-build-tools": "^1.4.2"
-	},
+	"devDependencies": {},
 	"scripts": {
+		"install-build-tools": "npm install --no-save pressbooks-build-tools",
+		"fix": "npm run -s fix:styles",
+		"fix:styles": "cross-env NODE_ENV=development node_modules/stylelint/bin/stylelint.js --fix \"assets/styles/**/*.scss\" --syntax scss",
 		"lint": "npm run -s lint:styles",
-		"lint:styles": "cross-env NODE_ENV=development node_modules/stylelint/bin/stylelint.js \"assets/styles/**/*.scss\" --syntax scss",
+		"lint:styles": "cross-env NODE_ENV=development node_modules/stylelint/bin/stylelint.js  \"assets/styles/**/*.scss\" --syntax scss",
 		"test": "npm run -s lint"
 	},
 	"eslintConfig": {
